infrastructure/components/capacitor/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: capacitor-gateway
  annotations:
    cert-manager.io/cluster-issuer: local-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: capacitor.apicius.local
  listeners:
  - protocol: HTTP
    hostname: capacitor.apicius.local
    port: 80
    name: http
  - protocol: HTTPS
    hostname: capacitor.apicius.local
    port: 443
    name: https
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls-capacitor-local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-http-route
spec:
  parentRefs:
  - name: capacitor-gateway
  hostnames:
    - capacitor.apicius.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: capacitor
      port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-http-route-redirect
  namespace: flux-system
spec:
  parentRefs:
  - name: capacitor-gateway
    sectionName: http
  hostnames:
  - capacitor.apicius.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
